<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/fon"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.horoscope.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:text="22.04.1990"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:id="@+id/topTextView"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/hpTextView"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/luckTextView"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/moneyTextView"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/workTextView"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/loveTextView"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text=""
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:background="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text="@string/hpTextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageViev1"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pk1"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text="@string/luckTextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/imageViev2"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pk1"
                android:layout_height="80dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text="@string/moneyTextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/imageViev3"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pk1"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text="@string/workTextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/imageViev4"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pk1"
                android:layout_height="80dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#fff"/>

            <TextView
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:textColor="#fff"
                android:text="@string/loveTextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/imageViev5"
                android:layout_width="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pk1"
                android:layout_height="80dp" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>

